[package]
name = "vm_streaming"
version = "0.1.0"
edition = "2021"
authors = [">Bryan Ríos <bryanriosb01@gmail.com>"]

[dependencies]
gio = "0.19.5"
glib = "0.19.7"
libc = "0.2.122"
zbus = { version = "3.15", features = ["xml"] }
zvariant = { version = "3.15", features = ["serde_bytes"] }
enumflags2 = { version = "0.7", features = ["serde"] }
derivative = "2.2.0"
async-trait = "0.1.80"
serde_bytes = "0.11.14"
async-std = "1.12.0"
tokio = { version = "1", features = ["full"] }
tokio-macros = "~2.3.0"
minifb = "0.20.0"
image = "0.24.6"
imageproc = "0.25.0"
once_cell = "1.19.0"
serde_repr = "0.1.19"
bitflags = "1.2.1"
serde = { version = "1.0.203", features = ["derive"] }
pixels = "0.13.0"
winit = "0.28"









